--- a/spring-book-mybatis/pom.xml
+++ b/spring-book-mybatis/pom.xml
@@ -11,11 +11,17 @@
 
     <artifactId>spring-book-mybatis</artifactId>
     <dependencies>
+
         <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.4.6</version>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.2</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
     </dependencies>
 
 
